added create and get time slot apis in given date range