@@ -8,9 +8,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
-
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 public class EmergencyHelplineController {
@@ -28,7 +26,7 @@ public class EmergencyHelplineController {
     public List<EmergencyHelplineDTO> getAllEmergencyHelplines() {
         return emergencyHelplineService.getAllEmergencyHelplines().stream()
                 .map(emergencyHelplineMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @PreAuthorize("hasRole('ADMIN')")
